The commit of all commits

--- a/Mindful/appsettings.json
+++ b/Mindful/appsettings.json
@@ -1,12 +1,14 @@
 {
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=localhost;Database=Mindful;Integrated Security=True;TrustServerCertificate=True;"
+
+    },
+
     "Logging": {
         "LogLevel": {
             "Default": "Information",
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Mindful;Trusted_Connection=True;"
-    }
+    "AllowedHosts": "*"
 }
